# weighted_region_layer

./: CMakeLists.txt  README.md  costmap_plugins.xml  package.xml  plugins.xml  rviz_plugins.xml
costmap_plugin/: t.wrl  weighted_region_layer.cpp  weighted_region_layer.hpp
include/weighted_region_layer/: weighted_region_layer.hpp
msg/: data_serial.msg
param/: weighted_region_config.yaml
rviz_plugin/: marking_panel.cpp  marking_panel.hpp  marking_tool.cpp  marking_tool.hpp
src/: main.cpp  serialization.cpp  weighted_region_layer.cpp
srv/: LoadWeightedRegionFile.srv  SaveWeightedRegionFile.srv
